@@ -1,6 +1,12 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
-2.000002
+2.001000
+ [Added / runtime requires]
+ - Module::Runtime
+ - Try::Tiny
+
+ [Removed / runtime requires]
+ - Class::Load 0.06
 
 2.000001 2014-08-15T21:24:14Z
  [Removed / test requires]
