@@ -1,6 +1,6 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
-2.000002
+2.001000
 
 2.000001 2014-08-15T21:24:14Z
 
